--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -5,7 +5,41 @@
   color: #2c3e50;
 }
 
+
 * {
   margin: 0;
   box-sizing: border-box;
+}
+.footer-dark {
+  padding:50px 1;
+  color:#f0f9ff;
+  background-color:#282d32;
+  
+}
+
+.footer-dark h3 {
+  margin-top:0;
+  margin-bottom:20px;
+  margin-left: 300px;
+  font-weight:bold;
+  font-size:20px;
+}
+
+.footer-dark ul {
+  padding:0;
+  list-style:none;
+  line-height:1.6;
+  font-size:14px;
+  margin-bottom:0;
+  margin-left: 300px;
+}
+
+.footer-dark ul a {
+  color:inherit;
+  text-decoration:none;
+  opacity:0.6;
+}
+
+.footer-dark ul a:hover {
+  opacity:0.8;
 }
